# wer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Infinite_World_Exploration_Project_Overview.md  README.md  justfile  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  rust-toolchain.toml  world-model.md
.github/workflows/: ci.yml
crates/loom-core/: Cargo.toml
crates/loom-core/src/: lib.rs
crates/loom-transport/: Cargo.toml
crates/loom-transport/src/: lib.rs
crates/loom-world/: Cargo.toml
crates/loom-world/src/: lib.rs
crates/platform-native/: Cargo.toml
crates/platform-native/examples/: overlay_spike.rs
crates/platform-native/src/: dump.rs  executor.rs  gpumap.rs  input.rs  main.rs  overlay.rs  panel.rs  pov.rs  viz.rs
crates/platform-native/tests/fixtures/: native_input_characterization.txt  native_map_characterization.txt  native_panel_source_characterization.txt
crates/platform-native/ui/: overlay.css  panel.html  panel.js  toolbar.html  toolbar.js
crates/platform-web/: Cargo.toml
crates/platform-web/src/: lib.rs
crates/platform-web/tests/: wasm_parity.rs
crates/platform-web/web/: assert-diagnostics.mjs  assert-layout.mjs  capture-layout.mjs  index.html  smoke.mjs
crates/platform-web/web/assets/: app.css  app.js  benchmark.js  bridge-ipc.js  bridge-wasm.js  commands.js  help.js  storage.js  worker.js
crates/platform-web/web/assets/ui/: diagnostics.js  keys.js  panel-dock.js  toolbar.js
crates/platform-web/web/baselines/: native-web-alignment-m0-layout.json
crates/platform-web/web/help/: index.html
crates/pov-host/: Cargo.toml
crates/pov-host/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/shaders/: compose_map.wgsl  debug_map.wgsl  pov_organism.wgsl  pov_sky.wgsl  pov_terrain.wgsl  pov_water.wgsl  triangle.wgsl
crates/renderer/src/: gpumap.rs  lib.rs  pov.rs
crates/renderer/tests/: wgsl.rs
crates/tools/: Cargo.toml
crates/tools/src/: anchor.rs  atlas.rs  ecology.rs  executor.rs  filestore.rs  ledger.rs  lib.rs  loom.rs  loom_0b.rs  replay.rs  scale.rs  vault.rs
crates/tools/tests/: anchor.rs  atlas.rs  continuity.rs  ecology.rs  persistence.rs  precision.rs  preserve.rs  route.rs
crates/viewer-host/: Cargo.toml
crates/viewer-host/src/: action.rs  atlas.rs  controller.rs  dto.rs  input.rs  inspect.rs  layout.rs  lib.rs  map.rs  panel.rs  world.rs
crates/world-core/: Cargo.toml
crates/world-core/benches/: ecology.rs  generation.rs  records.rs  steering.rs
crates/world-core/src/: anchor.rs  biome.rs  capture.rs  climate.rs  coord.rs  dephash.rs  drainage.rs  ecology.rs  field.rs  foodweb.rs  genome.rs  geology.rs  habitat.rs  hash.rs  hydrology.rs  layer.rs  lib.rs  population.rs  possibility.rs  possibility_field.rs  record.rs  route.rs  routing.rs  simd.rs  soils.rs  species.rs  terrain.rs  vegetation.rs
crates/world-core/tests/: determinism.rs  simd_differential.rs
crates/world-runtime/: Cargo.toml
crates/world-runtime/benches/: ecology.rs  update.rs
crates/world-runtime/src/: budget.rs  generate.rs  lib.rs  macrocache.rs  mapcolor.rs  pool.rs  realize.rs  region.rs  resonance.rs  rostercache.rs  route.rs  storage.rs  stream.rs  task.rs  tier.rs  timing.rs  vault.rs
crates/world-runtime/tests/: alloc.rs  streaming.rs  succession.rs
docs/: LICENSE  conceptual-model-draft.md  conceptual-model.md  core-concepts.md  existing-patents.md  new-world-model-1.md  new-world-model-comparison.md  new-world-model-option-1.md  new-world-model-option-2.md  new-world-model-option-3.md  new-world-model-option-4-explained.md  new-world-model-option-4-implementation-stage-0A.md  new-world-model-option-4-implementation-stage-0B.md  new-world-model-option-4.md  new-world-model-visualization-design.md  new-world-model-visualization-requirements.md  new-world-realization-interface.md  phase-1-signoff.md  world-model-improvements.md  world-model.md
docs/adr/: 0001-record-architecture-decisions.md  0002-workspace-crate-boundaries.md  0003-deterministic-integer-hashing.md  0004-terrain-noise-and-weak-possibility-coupling.md  0005-drift-dirties-only-possibility-dependent-layers.md  0006-travel-fueled-convergence.md  0007-declared-layer-dependencies.md  0008-tiles-are-functions-of-their-dependency-hash.md  0009-drainage-topology-from-quantized-elevation.md  0010-species-identity-presentation-grade-until-atlas.md  0011-anchors-capture-trait-targets-combine-order-independently.md  0012-resonance-gates-transition.md  0013-shareable-records-quantized-at-persistence-boundary.md  0014-vault-stores-deviations-with-crdt-merge.md  0015-routes-attract-as-derived-anchors.md  0016-simd-kernels-bit-identical-to-scalar-twins.md  0017-gpu-compute-is-derived-presentation.md  0018-settled-state-is-schedule-independent.md  0019-dependency-hashes-gate-integration.md  0020-preserve-overlaps-use-lowest-content-id.md  0021-file-bound-debug-captures.md  0022-persistence-success-requires-durable-backend-commit.md  0023-field-cache-pressure-parks-derived-state.md  0024-gameplay-uses-one-canonical-organism-slot.md  0025-anchor-steering-uses-canonical-multisets.md  0026-route-attraction-is-globally-bounded.md  0027-fixed-point-drainage-and-halo-sampled-terrain.md  0028-shared-viewer-host-and-one-world-multi-view.md  README.md
docs/plans/: graphics-libraries.md
docs/plans/prototype/: 3d-design.md  3d-phase-1-plan.md  3d-phase-2-plan.md  3d-phase-3-plan.md  3d-phase-4-plan.md  implementation-plan.md  improvement_A_10_content_equality_canonical_sets.md  improvement_A_11_executor_failure_shutdown.md  improvement_A_12_snapshot_route_truth.md  improvement_A_13_verification_surface.md  improvement_A_1_self_healing.md  improvement_A_2_preserve_ownership_revision.md  improvement_A_3_persistence_failures_durability.md  improvement_A_4_authoritative_regional_history.md  improvement_A_5_resource_tier_invariance.md  native-web-alignment.md  (+8 more)
docs/wry-overlay/: implementation-plan.md  spike-notes.md
wer-vault/seen/: 0000000000000000  00000000ffffffff  00000001ffffffff  00000002ffffffff  fffffffeffffffff  ffffffffffffffff
