# Infinite World Exploration Game — Cargo workspace.
#
# The workspace is split into platform-neutral crates (world-core, world-runtime)
# and platform-specific crates (renderer, platform-native, platform-web) so that
# core simulation and generation can compile for both native and wasm32 targets
# from the very beginning. See docs/adr/0002-workspace-crate-boundaries.md.
[workspace]
resolver = "2"
members = [
    "crates/world-core",
    "crates/world-runtime",
    "crates/renderer",
    "crates/platform-native",
    "crates/platform-web",
    "crates/tools",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = ""
publish = false

# Centralized dependency versions. Individual crates opt in via
# `dep.workspace = true` so versions stay consistent across the workspace.
[workspace.dependencies]
# Platform-neutral.
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
glam = { version = "0.33", default-features = false, features = ["libm"] }
bytemuck = { version = "1", features = ["derive"] }

# Native-only.
wgpu = "29"
winit = "0.30"
pollster = "1"
rayon = "1"
raw-window-handle = "0.6"
env_logger = "0.11"
log = "0.4"

# Web-only.
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# Portability-oriented lints matching the plan's determinism goals.
# (Kept conservative for a bootstrap; tighten as subsystems land.)
todo = "allow"

[profile.dev]
opt-level = 1        # keep generation code tolerable to iterate on

[profile.dev.package."*"]
opt-level = 3        # but build dependencies (wgpu, naga, ...) optimized

[profile.release]
lto = "thin"
codegen-units = 1
