[package]
name = "loom-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Platform-neutral canonical packet kernel for World Loom Stage 0A."

[lints]
workspace = true

[dependencies]
sha2 = { workspace = true }

