[package]
name = "loom-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic fixed-point transport kernel for World Loom Stage 0A."

[lints]
workspace = true

[dependencies]
loom-core = { path = "../loom-core" }
sha2 = { workspace = true }

