[package]
name = "platform-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Native desktop application shell: windowing, event loop, and native platform services."

[lints]
workspace = true

[[bin]]
name = "wer"
path = "src/main.rs"

[dependencies]
world-core = { path = "../world-core" }
# `pass-timing`: the native shell is a primary consumer of the per-pass
# telemetry (phase-6-plan.md §5.2); wasm builds never see the feature.
world-runtime = { path = "../world-runtime", features = ["pass-timing"] }
# The shared native file-tree Storage backend (phase-5-plan.md §5.3) — the
# tools crate has no windowing/GPU dependencies, so this stays lightweight.
tools = { path = "../tools" }
renderer = { path = "../renderer" }
pov-host = { path = "../pov-host" }
# Camera math for the POV fly camera (3d-phase-1-plan.md §4): the shell
# computes matrices and hands the renderer plain arrays. `f64` for the
# camera position (world coordinates are f64 everywhere else).
glam = { workspace = true, features = ["f64"] }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
font8x8 = { workspace = true }

[dev-dependencies]
# Byte-exact mesher determinism assertions (3d-phase-1-plan.md §10).
bytemuck = { workspace = true }
