[package]
name = "platform-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Native desktop application shell: windowing, event loop, and native platform services."

[lints]
workspace = true

[features]
# The DOM overlay dock (docs/wry-overlay/implementation-plan.md) is the
# default native UI. On Linux it needs the WebKitGTK dev packages (see
# README prerequisites; CI installs them). `--no-default-features` builds
# the bitmap-panel-only shell, and `WER_OVERLAY=0` disables the dock at
# runtime (the headless/benchmark-clean path).
default = ["overlay"]
overlay = ["dep:wry", "dep:gtk", "dep:serde_json"]

[[bin]]
name = "wer"
path = "src/main.rs"

[[example]]
name = "overlay_spike"
path = "examples/overlay_spike.rs"
required-features = ["overlay"]

[dependencies]
world-core = { path = "../world-core" }
# `pass-timing`: the native shell is a primary consumer of the per-pass
# telemetry (phase-6-plan.md §5.2); wasm builds never see the feature.
world-runtime = { path = "../world-runtime", features = ["pass-timing"] }
# Cross-platform viewer value contracts and, in later alignment milestones,
# the shared input/controller/presentation host (ADR 0028).
viewer-host = { path = "../viewer-host" }
# The shared native file-tree Storage backend (phase-5-plan.md §5.3) — the
# tools crate has no windowing/GPU dependencies, so this stays lightweight.
tools = { path = "../tools" }
renderer = { path = "../renderer" }
pov-host = { path = "../pov-host" }
# Camera math for the POV fly camera (3d-phase-1-plan.md §4): the shell
# computes matrices and hands the renderer plain arrays. `f64` for the
# camera position (world coordinates are f64 everywhere else).
glam = { workspace = true, features = ["f64"] }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
font8x8 = { workspace = true }
# Overlay-spike only (see [features]).
wry = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# wry on Linux is WebKitGTK-hosted; the spike must init and pump the GTK main
# loop alongside winit (implementation-plan.md §5).
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gtk = { workspace = true, optional = true }

[dev-dependencies]
# Byte-exact mesher determinism assertions (3d-phase-1-plan.md §10).
bytemuck = { workspace = true }
# Collision-resistant digests keep the native CPU-map characterization
# fixtures compact while still pinning the complete RGBA byte stream.
sha2 = { workspace = true }
