[package]
name = "platform-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Browser/wasm application shell: wasm-bindgen glue, canvas, workers, browser storage."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
world-core = { path = "../world-core" }
world-runtime = { path = "../world-runtime" }
# Cross-platform viewer value contracts and, in later alignment milestones,
# the shared input/controller/presentation host (ADR 0028).
viewer-host = { path = "../viewer-host" }
# The browser POV host (phase-7-plan.md §9.9): the same shared camera/mesher/
# chunk-manager stack the native shell drives, plus the wgpu renderer it
# feeds. Both compile on native too, so the facade stays unit-testable.
pov-host = { path = "../pov-host" }
renderer = { path = "../renderer" }
glam = { workspace = true, features = ["f64"] }
log = { workspace = true }

# Browser-only dependencies. Gating them to the wasm target keeps a native
# `cargo check` of the whole workspace fast and free of browser bindings, while
# the real build target (`wasm32-unknown-unknown`) still gets everything.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = ["console", "HtmlCanvasElement"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
