[package]
name = "pov-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared POV host: camera, terrain meshing, and chunk scheduling for the 3D view, used by the native and browser shells."

[lints]
workspace = true

[dependencies]
world-core = { path = "../world-core" }
world-runtime = { path = "../world-runtime" }
renderer = { path = "../renderer" }
# The host computes the camera matrices and hands the renderer plain arrays
# (3d-phase-1-plan.md §5). `f64` for the double-precision world positions.
glam = { workspace = true, features = ["f64"] }
log = { workspace = true }

[dev-dependencies]
# The baked-light golden tests cast vertex slices for byte comparison.
bytemuck = { workspace = true }
