[package]
name = "renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "wgpu/WGSL renderer. Owns the GPU device, surface, and render graph."

[lints]
workspace = true

[dependencies]
world-core = { path = "../world-core" }
wgpu = { workspace = true }
log = { workspace = true }
# Plain-old-data casting for the GPU-map uniform layout (phase-6-plan.md §6.5).
bytemuck = { workspace = true }

[dev-dependencies]
# WGSL parse+validate in CI without a GPU (phase-6-plan.md §11.5).
naga = { version = "29", features = ["wgsl-in"] }
