[package]
name = "tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Developer tools: world inspectors, procedural visualizers, validation and replay tools."

[lints]
workspace = true

[[bin]]
name = "wer-inspect"
path = "src/bin/inspect.rs"

[dependencies]
world-core = { path = "../world-core" }
# `pass-timing`: `wer-scale --report` prints the per-pass wall-clock table the
# committed baseline snapshots (phase-6-plan.md §10, §12). Native-only crate,
# so the feature is safe here.
world-runtime = { path = "../world-runtime", features = ["pass-timing"] }

[[bin]]
name = "wer-replay"
path = "src/bin/replay.rs"

[[bin]]
name = "wer-ledger"
path = "src/bin/ledger.rs"

[[bin]]
name = "wer-anchor"
path = "src/bin/anchor.rs"

[[bin]]
name = "wer-atlas"
path = "src/bin/atlas.rs"

[[bin]]
name = "wer-vault"
path = "src/bin/vault.rs"

[[bin]]
name = "wer-scale"
path = "src/bin/scale.rs"
