[package]
name = "viewer-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Platform-neutral viewer input, presentation, inspection, and controller contracts."

[lints]
workspace = true

[dependencies]
log.workspace = true
pov-host = { path = "../pov-host" }
renderer = { path = "../renderer" }
serde.workspace = true
# Shared control-surface serializations (dto module): both shells consume the
# same descriptor/presentation JSON, so it is built here (wry-overlay plan M2).
serde_json.workspace = true
world-core = { path = "../world-core" }
world-runtime = { path = "../world-runtime" }

[dev-dependencies]
sha2.workspace = true
