[package]
name = "world-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Platform-neutral deterministic world model: hashing, coordinates, possibility space."

[lints]
workspace = true

[dependencies]
glam = { workspace = true }
# Phase 5 record schema + codec (phase-5-plan.md §4). Both are `no_std`-clean;
# the wasm CI job enforces that they stay so.
serde = { workspace = true }
postcard = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "generation"
harness = false

[[bench]]
name = "ecology"
harness = false

[[bench]]
name = "steering"
harness = false

[[bench]]
name = "records"
harness = false
