[package]
name = "world-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Platform-neutral region lifecycle, streaming, scheduling, and abstract storage/task interfaces."

[lints]
workspace = true

[dependencies]
world-core = { path = "../world-core" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "update"
harness = false
