[package]
name = "world-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Platform-neutral region lifecycle, streaming, scheduling, and abstract storage/task interfaces."

[lints]
workspace = true

[features]
# Wall-clock pass timings inside `RegionMap::update` (phase-6-plan.md §5.2).
# Uses `std::time::Instant`, which wasm32-unknown-unknown lacks, so only the
# native shell and tools enable it; wasm builds compile without it and the
# `pass_ms` telemetry reports zeros.
pass-timing = []

[dependencies]
world-core = { path = "../world-core" }
# The vault decodes generic record bodies (phase-5-plan.md §5.2).
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "update"
harness = false

[[bench]]
name = "ecology"
harness = false
